feat: update MyLibrary sorting to title ascending, integrate ActionButton in Profile and UserProfileScreen for list navigation, add reviews section in BookScreen, and enhance UI components with improved styles and animations

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -8,8 +8,12 @@
         "issues": "issues",
         "list": "list",
         "lists": "lists",
+        "review": "review",
+        "reviews": "reviews",
         "search": "Search books",
         "error": "Error",
+        "cancel": "Cancel",
+        "deleting": "Deleting...",
         "bookTypes": {
             "comic": "Comic",
             "novel": "Novel",
@@ -298,7 +302,45 @@
         "inYourFavorites": "In your favorites",
         "byTheSamePublisher": "Books by the same publisher",
         "byTheSameAuthor": "Books by the same author",
-        "openIn": "Open in"
+        "openIn": "Open in",
+        "reviews": "Reviews",
+        "seeAllReviews": "See all reviews",
+        "viewMore": "View more"
+    },
+    "reviews": {
+        "title": "Reviews",
+        "sortBy": "Sort by",
+        "sortedBy": "Sorted by",
+        "noReviews": "No reviews yet",
+        "writeReview": "Write a review",
+        "editReview": "Edit your review",
+        "yourRating": "Your rating",
+        "ratingRequired": "You need to rate this book first",
+        "placeholder": "Share your thoughts about this book...",
+        "publish": "Publish",
+        "update": "Update",
+        "helpText": "Your rating at the time of writing will be saved with your review.",
+        "createSuccess": "Review published successfully!",
+        "createError": "Failed to publish review",
+        "updateSuccess": "Review updated successfully!",
+        "updateError": "Failed to update review",
+        "reviewDetail": "Review",
+        "previousVersions": "Previous versions",
+        "edited": "Edited",
+        "version": "Version {{number}}",
+        "revision": "revision",
+        "revisions": "revisions",
+        "deleteReview": "Delete",
+        "deleteConfirmTitle": "Delete your review?",
+        "deleteConfirmMessage": "This action cannot be undone. Your review and all its history will be permanently deleted.",
+        "deleteSuccess": "Review deleted successfully",
+        "deleteError": "Failed to delete review",
+        "sort": {
+            "popular": "Most popular",
+            "recent": "Most recent",
+            "highestRated": "Highest rated",
+            "lowestRated": "Lowest rated"
+        }
     },
     "chat": {
         "sources": "Used sources",
