--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -8,8 +8,12 @@
         "issues": "numéros",
         "list": "liste",
         "lists": "listes",
+        "review": "avis",
+        "reviews": "avis",
         "search": "Rechercher des livres",
         "error": "Erreur",
+        "cancel": "Annuler",
+        "deleting": "Suppression...",
         "bookTypes": {
             "comic": "Comic",
             "novel": "Roman",
@@ -298,7 +302,45 @@
         "inYourFavorites": "Dans vos favoris",
         "byTheSamePublisher": "Livres par le même éditeur",
         "byTheSameAuthor": "Livres par le même auteur",
-        "openIn": "Ouvrir dans"
+        "openIn": "Ouvrir dans",
+        "reviews": "Avis",
+        "seeAllReviews": "Voir tous les avis",
+        "viewMore": "Voir plus"
+    },
+    "reviews": {
+        "title": "Avis",
+        "sortBy": "Trier par",
+        "sortedBy": "Trié par",
+        "noReviews": "Aucun avis pour le moment",
+        "writeReview": "Écrire un avis",
+        "editReview": "Modifier votre avis",
+        "yourRating": "Votre note",
+        "ratingRequired": "Vous devez d'abord noter ce livre",
+        "placeholder": "Partagez votre avis sur ce livre...",
+        "publish": "Publier",
+        "update": "Mettre à jour",
+        "helpText": "Votre note au moment de l'écriture sera enregistrée avec votre avis.",
+        "createSuccess": "Avis publié avec succès !",
+        "createError": "Impossible de publier l'avis",
+        "updateSuccess": "Avis mis à jour avec succès !",
+        "updateError": "Impossible de mettre à jour l'avis",
+        "reviewDetail": "Avis",
+        "previousVersions": "Versions précédentes",
+        "edited": "Modifié",
+        "version": "Version {{number}}",
+        "revision": "révision",
+        "revisions": "révisions",
+        "deleteReview": "Supprimer",
+        "deleteConfirmTitle": "Supprimer votre avis ?",
+        "deleteConfirmMessage": "Cette action est irréversible. Votre avis et tout son historique seront définitivement supprimés.",
+        "deleteSuccess": "Avis supprimé avec succès",
+        "deleteError": "Impossible de supprimer l'avis",
+        "sort": {
+            "popular": "Les plus populaires",
+            "recent": "Les plus récents",
+            "highestRated": "Les mieux notés",
+            "lowestRated": "Les moins bien notés"
+        }
     },
     "chat": {
         "sources": "Sources utilisées",
