--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -13,7 +13,15 @@
         "search": "Search books",
         "error": "Error",
         "cancel": "Cancel",
+        "confirm": "Confirm",
+        "delete": "Delete",
         "deleting": "Deleting...",
+        "loading": "Loading...",
+        "unsavedChangesTitle": "Unsaved changes",
+        "unsavedChangesMessage": "You have unsaved changes. What would you like to do?",
+        "discardChanges": "Discard changes",
+        "saveAndExit": "Save and exit",
+        "continueEditing": "Continue",
         "bookTypes": {
             "comic": "Comic",
             "novel": "Novel",
@@ -288,6 +296,11 @@
         "english": "English",
         "french": "French"
     },
+    "ratingSlider": {
+        "notRated": "Not rated yet",
+        "dragOrTapToRate": "Drag or tap to rate",
+        "deleteRating": "Remove rating"
+    },
     "book": {
         "translatedByIA": "Translated by IA",
         "publicationStatus": {
@@ -426,6 +439,10 @@
             "rankedDescription": "List with preference order",
             "collection": "Collection",
             "collectionDescription": "Simple collection without ranking"
+        },
+        "deleteModal": {
+            "title": "Delete list",
+            "message": "This action cannot be undone. The list and all its content will be permanently deleted."
         }
     },
     "description": {
