feat: update review components to use accent colors for stars and buttons, enhance WriteReviewBottomSheet with animations and improved layout, and add new localization keys for review features

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -357,6 +357,9 @@
         "loginRequired": "Sign in to write a review",
         "trackRequired": "Add this book to your library to write a review",
         "placeholder": "Share your thoughts about this book...",
+        "newReview": "New review",
+        "startWriting": "Start writing...",
+        "markedAsSpoiler": "Contains spoilers",
         "publish": "Publish",
         "submit": "Submit",
         "update": "Update",
