--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -357,6 +357,9 @@
         "loginRequired": "Connectez-vous pour écrire un avis",
         "trackRequired": "Ajoutez ce livre à votre bibliothèque pour écrire un avis",
         "placeholder": "Partagez votre avis sur ce livre...",
+        "newReview": "Nouvel avis",
+        "startWriting": "Commencez à écrire...",
+        "markedAsSpoiler": "Contient des spoilers",
         "publish": "Publier",
         "submit": "Publier",
         "update": "Mettre à jour",
