feat: enhance authentication screens with keyboard navigation, update button animations, and improve localization for onboarding and input fields

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -36,10 +36,9 @@
     "create": "Create",
     "auth": {
         "onboarding": {
-            "slogan": "Track your reads",
-            "sloganSubtitle": "Keep track of every book, manga, and comic you read",
+            "slogan": "Track your mangas, manhwas and comics.",
             "continue": "Continue",
-            "chooseMethod": "How would you like to continue?",
+            "chooseMethod": "Trackr. One app to manage all your reading.",
             "chooseMethodSubtitle": "Sign in or create an account to get started",
             "continueWithGoogle": "Continue with Google",
             "continueWithEmail": "Continue with Email"
